# Samples

./: .gitignore  Profiles.json  README.md  hello_world.py  postgres_deploy.yaml  prefect.yaml  read_file.py  test.py
mcp/: README.md  cli.py  overview.md  pyproject.toml
mcp/agents/: __init__.py  base.py
mcp/agents/providers/: __init__.py  anthropic.py  base.py
mcp/agents/providers/_template/: README.md  __init__.py
mcp/agents/providers/poolside/: __init__.py  examples.mdx
mcp/config/: targets.yaml
mcp/mcp_servers/: __init__.py
mcp/mcp_servers/scanner/: __init__.py  scope.py
mcp/mcp_servers/scanner/tools/: feroxbuster.py
mcp/outputs/: summary.txt
mcp/prompts/: scanner.md
mcp/security_scanning/: README.md  cli.py  overview.md
mcp/security_scanning/agents/: __init__.py  analysis_agent.py  base.py  orchestrator.py  recon_agent.py  scanner_agent.py
mcp/security_scanning/agents/providers/: __init__.py  poolside.py
mcp/security_scanning/agents/providers/_template/: provider.py
mcp/security_scanning/agents/providers/poolside/: openapi.json  provider.py
mcp/security_scanning/mcp_servers/analysis/: README.md  __init__.py  server.py
mcp/security_scanning/mcp_servers/analysis/tools/: __init__.py  exploitdb.py  (+5 more)
mcp/security_scanning/mcp_servers/recon/: README.md  __init__.py  server.py
mcp/security_scanning/mcp_servers/scanner/: scope.py  server.py
mcp/security_scanning/prompts/: analysis.md  orchestrator.md  recon.md
mcp/security_scanning/reporting/: README.md  __init__.py  generator.py
mcp/security_scanning/reporting/templates/: report.md.j2
mcp/security_scanning/storage/: README.md  __init__.py  models.py  store.py
mcp/template/: README.md  cli.py  pyproject.toml
mcp/template/agents/: README.md  __init__.py  base.py  your_agent.py
mcp/template/agents/providers/: README.md  __init__.py  base.py
mcp/template/config/: README.md  settings.yaml
mcp/template/mcp_servers/: README.md
mcp/template/mcp_servers/your_server/: __init__.py  server.py
mcp/template/prompts/: README.md  your_agent.md
mcp/template/tests/: README.md  conftest.py  test_mcp_server.py
poolside-identity/: README.md  admins.csv  pyproject.toml  team1.csv  test_cases.md  users.json
poolside-identity/.poolside/: settings.local.yaml
poolside-identity/examples/: users.json
poolside-identity/poolside_identity/: __init__.py  cli.py  client.py  models.py  sync.py
poolside-identity/poolside_identity/operations/: __init__.py  teams.py  users.py
poolside-identity/test_cases/: run_all_tests.sh
poolside-identity/test_cases/1_environment_profile/: run_all.sh
poolside-identity/test_cases/2_team_management/: test_2_team_management.sh
poolside-identity/test_cases/3_user_management/: test_3_user_management.sh
poolside-identity/test_cases/4_sync_dry_run/: run_all.sh
poolside-identity/test_cases/5_sync_execute/: test_5_sync_execute.sh
poolside-identity/test_cases/6_multi_team/: run_all.sh  test_6_multi_team.sh
poolside-identity/test_cases/9_safety_validation/: test_9_safety_validation.sh
poolside-identity/tests/: test_client.py  test_sync.py
(+664 files in other folders)
