[project]
name = "security-scanner"
version = "0.1.0"
description = "AI-driven security scanning with MCP servers"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "anthropic",
    "python-nmap",
    "pydantic>=2.0",
    "click",
    "rich",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
scanner = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_servers", "agents"]

[tool.hatch.build.targets.sdist]
include = [
    "mcp_servers",
    "agents",
    "prompts",
    "config",
    "cli.py",
]
